# Genesis-Seeds

./: CHANGELOG-v0.3.0.md  CITATION.cff  COMMERCIAL.md  LICENSE  howtostartacommand
Genesis-Seed/: NOTICE
Genesis-Seed/docs/: AriaConstructor.gd   BEACON_PEIG_Claude_Spec_v1.docx  Cosmic Omega Synthesis Integration.docx  OmegaAlpha.docx  phase5_whitepaper.md  (+2 more)
Genesis-Seeds/: MyWork.md
sovereign-agent-v0.2.1/sovereign-agent/: .gitignore  CHANGELOG.md  README.md  hello.txt  pyproject.toml
sovereign-agent-v0.2.1/sovereign-agent/scripts/: bwrap-wrap.sh  sovereign-agent-seal.service  sovereign-agent-seal.timer  sovereign-agent.service
sovereign-agent-v0.2.1/sovereign-agent/sql/: 001_events.sql  002_atoms.sql
sovereign-agent-v0.2.1/sovereign-agent/src/sovereign_agent/: __init__.py  approval.py  authority.py  cli.py  code_gate.py  config.py  db.py  events.py  loop.py  mode_controller.py  modes.py  ollama_client.py  pathguard.py  protocol_zero.py  reflector.py  sandbox.py  seal.py  vram.py
sovereign-agent-v0.2.1/sovereign-agent/src/sovereign_agent/memory/: __init__.py  atom.py  retrieval.py
sovereign-agent-v0.2.1/sovereign-agent/src/sovereign_agent/tools/: __init__.py  base.py  copy_file.py  edit_file.py  embed_query.py  list_dir.py  memory_search.py  memory_write.py  read_file.py  search_text.py  web_fetch.py  write_file.py
sovereign-agent-v0.2.1/sovereign-agent/tests/: conftest.py  test_approval.py  test_atom_versioning.py  test_authority.py  test_code_gate.py  test_events.py  test_mode_controller.py  test_ollama_client.py  test_pathguard.py  test_reflector.py  test_retrieval.py  test_seal.py  test_vram.py
(+208 files in other folders)
